maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:23: error: not found: type dir
def isDirLibre(d:dir):Boolean={
                 ^Escaper:33: error: not found: value dir
	if(isDirLibre(dir)){
                      ^